# pygame-roguelike

./: README.md  check.py  missing.json  pyproject.toml
resources/character/small_orc/idle/: small_orc_idle.aseprite
resources/character/small_orc/run/: small_orc_run.aseprite
resources/enemies/red/idle/: enemy_idle.aseprite
resources/enemies/red/run/: enemy_run.aseprite
resources/tiles/: ff.aseprite
rogue/: actions.py  enemy.py  entity.py  enums.py  main.py  map.py  player.py  rect_room.py  tile.py
rogue/components/: animator.py  health_bar.py
